--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,32 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.google.code.spring-crypto-utils</groupId>
     <artifactId>spring-crypto-utils</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>Spring Crypto Utils</name>
+    <version>0.9.0-SNAPSHOT</version>
+    <name>Spring Cryptographic Utilities</name>
 
     <properties>
         <spring.version>3.0.0.RELEASE</spring.version>
     </properties>
+
+    <scm>
+        <developerConnection>scm:svn:https://spring-crypto-utils.googlecode.com/svn/trunk</developerConnection>
+        <connection>scm:svn:http://spring-crypto-utils.googlecode.com/svn/trunk</connection>
+        <url>http://code.google.com/p/spring-crypto-utils/source/browse/</url>
+    </scm>
+
+    <issueManagement>
+        <system>Google Code Issues</system>
+        <url>http://code.google.com/p/spring-crypto-utils/issues/list</url>
+    </issueManagement>
+
+    <licenses>
+        <license>
+            <name>Apache 2</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
@@ -53,6 +73,12 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
                     <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagBase>https://spring-crypto-utils.googlecode.com/svn/tags</tagBase>
                 </configuration>
             </plugin>
         </plugins>
