--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.google.code.spring-crypto-utils</groupId>
     <artifactId>spring-crypto-utils</artifactId>
-    <version>0.9.1-SNAPSHOT</version>
+    <version>0.9.1</version>
     <name>Spring Cryptographic Utilities</name>
+    <url>https://code.google.com/p/spring-crypto-utils/</url>
+    <description>A framework for easier configuration of cryptographic utilities using Spring.</description>
 
     <properties>
         <spring.version>3.0.0.RELEASE</spring.version>
     </properties>
 
     <scm>
-        <developerConnection>scm:svn:https://spring-crypto-utils.googlecode.com/svn/trunk</developerConnection>
-        <connection>scm:svn:http://spring-crypto-utils.googlecode.com/svn/trunk</connection>
-        <url>http://code.google.com/p/spring-crypto-utils/source/browse/</url>
+        <developerConnection>scm:svn:https://spring-crypto-utils.googlecode.com/svn/tags/spring-crypto-utils-0.9.1</developerConnection>
+        <connection>scm:svn:http://spring-crypto-utils.googlecode.com/svn/tags/spring-crypto-utils-0.9.1</connection>
+        <url>scm:svn:https://spring-crypto-utils.googlecode.com/svn/tags/spring-crypto-utils-0.9.1</url>
     </scm>
 
     <issueManagement>
@@ -35,7 +37,7 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.3</version>
+            <version>1.4</version>
         </dependency>
 
         <dependency>
@@ -82,5 +84,18 @@
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <show>public</show>
+                    <encoding>UTF-8</encoding>
+                    <excludePackageNames>*.springcryptoutils.core.spring</excludePackageNames>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
