--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
                 <configuration>
                     <show>public</show>
                     <encoding>UTF-8</encoding>
