--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
  | See the License for the specific language governing permissions and
  | limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
@@ -24,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.google.code.spring-crypto-utils</groupId>
     <artifactId>spring-crypto-utils</artifactId>
-    <version>1.4.0-SNAPSHOT</version>
+    <version>1.4.0</version>
     <packaging>jar</packaging>
     <name>Spring Cryptographic Utilities</name>
     <description>A framework for easier configuration of cryptographic utilities using Spring.</description>
@@ -39,7 +38,7 @@
         <connection>scm:git:git@github.com:mcaserta/spring-crypto-utils.git</connection>
         <developerConnection>scm:git:git@github.com:mcaserta/spring-crypto-utils.git</developerConnection>
         <url>http://github.com/mcaserta/spring-crypto-utils</url>
-        <tag>HEAD</tag>
+        <tag>spring-crypto-utils-1.4.0</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issues</system>
