bouncycastle version bump

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,8 @@
     <dependencies>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>1.46</version>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.59</version>
             <scope>test</scope>
         </dependency>
         <dependency>
