--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
+          distribution: 'corretto'
           java-version: 11
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
